service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gadgetsphere
spec:
  type: LoadBalancer
  selector:
    app: gadgetsphere
  ports:
    - port: 80
      targetPort: 80
