ingress-gadgetsphere.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gadgetsphere-ingress
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-1:668516169738:certificate/99a9bb9e-2b5b-4131-a5fd-e3486047c47c
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: alb
  rules:
    - host: gadgetsphere.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gadgetsphere
                port:
                  number: 80
    - host: www.gadgetsphere.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gadgetsphere
                port:
                  number: 80
